# verify-rust-std

./: .gitignore  README.md  flake.nix  kani-version.toml  metrics-data.json  run-kani.sh  rust-toolchain.toml  stdarch.patch
testable-simd-models/: Cargo.toml  README.md  test.sh
testable-simd-models/proofs/fstar/extraction/: .depend  Core_models.Abstractions.Bit.fst  Core_models.Abstractions.Bitvec.Int_vec_interp.fst  Core_models.Abstractions.Bitvec.fst  Core_models.Abstractions.Funarr.fst  Core_models.Abstractions.Simd.fst  Core_models.Core_arch.X86.Avx.fst  Core_models.Core_arch.X86.Avx2.fst  Core_models.Core_arch.X86.Extra.fst  Core_models.Core_arch.X86.Interpretations.Int_vec.Lemmas.fst  Core_models.Core_arch.X86.Interpretations.Int_vec.fst  Core_models.Core_arch.X86.Sse2.fst  Core_models.Core_arch.X86.Ssse3.fst  Core_models.Core_arch.X86.fst  Core_models.Neon.Generated.fst  Core_models.X86.Avx.fst  Core_models.X86.Avx2.fst  Core_models.X86.Sse2.fst  Core_models.X86.Ssse3.fst  Tactics.Circuits.fst  hax.fst.config.json
testable-simd-models/src/: helpers.rs  lib.rs
testable-simd-models/src/abstractions/: bit.rs  bitvec.rs  funarr.rs  mod.rs  simd.rs
testable-simd-models/src/core_arch/arm_shared/: mod.rs
testable-simd-models/src/core_arch/arm_shared/models/: mod.rs  neon.rs
testable-simd-models/src/core_arch/arm_shared/specs/: mod.rs
testable-simd-models/src/core_arch/arm_shared/tests/: mod.rs  neon.rs
testable-simd-models/src/core_arch/x86/: mod.rs
testable-simd-models/src/core_arch/x86/models/: avx.rs  avx2.rs  avx2_handwritten.rs  mod.rs  sse2.rs  (+1 more)
(+142 files in other folders)
